# sweep

./: .dockerignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  index.html  install.ps1  install.sh  style.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bench/: bench.sh
npm/: bin.js  install.js  package.json
src/: app.rs  commands.rs  config.rs  lib.rs  main.rs  scanner.rs  ui.rs
tests/: integration.rs
