[package]
name = "sweep"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
humansize = "2.1.3"
ratatui = { version = "0.30.2", features = ["crossterm"] }
trash = "5.2.6"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
