[package]
name = "dirsweep"
version = "0.2.1"
edition = "2024"
description = "A TUI tool for finding and removing bloated project directories"
keywords = ["tui", "disk-cleanup", "node_modules", "developer-tools", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/farrelaby/dirsweep"
homepage = "https://github.com/farrelaby/dirsweep"
license = "MIT"
readme = "README.md"
authors = ["farrelaby"]

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
humansize = "2.1.3"
ratatui = { version = "0.30.2", features = ["crossterm"] }
self-replace = "1.5"
serde_json = "1"
tempfile = "3"
trash = "5.2.6"
ureq = { version = "2", features = ["json"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
